ポリシーページ作成済

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>風評被害クラウドサービス</title>
     <link rel="stylesheet" href="./normalize.css" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./tablet.css">
+    <link rel="stylesheet" href="./phone.css">
   </head>
   <body>
     <!-- クラス名、id名、要素の使い方等微妙なものがありましたらご指摘いただきたいです -->
@@ -15,57 +17,30 @@
           <div class="top__container">
             <div class="top__container__title">
               <h1>
-                風評被害クラウドで<br />
                 レピュテーションリスクを<br />
-                スピード解決！
+                <span>スピード解決！</span>
               </h1>
             </div>
             <div class="top__container__logo">
               <img src="" alt="" />
             </div>
-            <div class="top__container__cta-wrapper">
-              <div class="top__container__cta-wrapper__text">
-                <h3>今なら相談料・着手金０円</h3>
-                <h3>無料リスク診断付き</h3>
+            <div class="top__container__text">
+                <h3>検索結果・SNS・口コミサイトの<br />
+                ネガティブな情報にお困りの企業様へ</h3>
               </div>
               <div class="cta-button">
-                <button class="top__container__cta-wrapper__cta-button">
-                  <h2>今すぐ相談してみる</h2>
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="32"
-                    height="32"
-                    viewBox="0 0 32 32"
-                    fill="none"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M1 15L26.2003 15L26.2003 17L1 17L1 15Z"
-                      fill="white"
-                      stroke="white"
-                      stroke-linecap="square"
-                    />
-                    <path
-                      fill-rule="evenodd"
-                      clip-rule="evenodd"
-                      d="M17 26.1999L27.3588 15.9992L17 5.80029L18.8128 4L31 15.9991L18.813 28L17 26.1999Z"
-                      fill="white"
-                      stroke="white"
-                      stroke-linecap="square"
-                    />
-                  </svg>
+                <button class="top__container__cta-button">
+                  <div class="top__container__cta-button__upper">
+                    <h2>\ 無料リスク診断付き /</h2>
+                  </div>
+                  <div class="top__container__cta-button__lower">
+                    <h2>今すぐ相談してみる</h2>
+                  </div>
                 </button>
               </div>
             </div>
             <div class="top__container__acter">
-              <img src="./images/acter.png" alt="" />
-            </div>
-            <div class="top__container__information">
-              <h2>
-                検索サジェスト<br />検索結果・SNS<br />転職・口コミサイト<br />
-                のネガティブな情報に<br />お困りの企業様へ
-              </h2>
+              <img src="./images/top-acter.png" alt="" />
             </div>
           </div>
         </div>
@@ -1764,7 +1739,7 @@
             <div class="footer__container__content">
 
               <div class="footer__container__content__policy">
-                <a href="">プライバシーポリシー</a>
+                <a href="./policy.html">プライバシーポリシー</a>
                 <div class="footer__container__content__policy__separate"></div>
                 <a href="">特定商取引法に基づく表記</a>
               </div>
