特商法追加

--- a/index.html
+++ b/index.html
@@ -1680,7 +1680,7 @@
                 </li>
                 <li class="free-service__container__cards__card">
                   <div class="free-service__container__cards__card__title">
-                    <h4>SNSの状況もチック</h4>
+                    <h4>SNSの状況もチェック</h4>
                   </div>
                   <div class="free-service__container__cards__card__image"> 
                     <img src="" alt="">
@@ -1741,7 +1741,7 @@
               <div class="footer__container__content__policy">
                 <a href="./policy.html">プライバシーポリシー</a>
                 <div class="footer__container__content__policy__separate"></div>
-                <a href="">特定商取引法に基づく表記</a>
+                <a href="./regulation.html">特定商取引法に基づく表記</a>
               </div>
                           <div class="footer__container__copyright">
                             <p>© 2024 ○○○○○. All rights reserved.</p>
