--- a/policy.html
+++ b/policy.html
@@ -45,7 +45,7 @@
                 <div class="footer__container__content__policy">
                   <a href="./policy.html">プライバシーポリシー</a>
                   <div class="footer__container__content__policy__separate"></div>
-                  <a href="">特定商取引法に基づく表記</a>
+                  <a href="regulation.html">特定商取引法に基づく表記</a>
                 </div>
                 <div class="footer__container__copyright">
                   <p>© 2024 ○○○○○. All rights reserved.</p>
