--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 ネガティブな情報にお困りの企業様へ</h3>
             </div>
 
-            <button class="top__container__cta-button">
+            <button class="top__container__cta-button CTA-button">
               <div class="top__container__cta-button__upper">
                 <h2>\ 無料リスク診断付き /</h2>
               </div>
@@ -665,14 +665,14 @@
               ブランドクラウドにお任せください
             </h2>
           </div>
-          <div class="firstCTABanner__CTA-button">
+          <button class="firstCTABanner__CTA-button CTA-button">
             <div class="firstCTABanner__CTA-button__caption">
               <p>\ 無料リスク診断付き /</p>
             </div>
             <div class="firstCTABanner__CTA-button__action-word">
               <h3>今すぐ相談する</h3>
             </div>
-          </div>
+          </button>
           <div class="firstCTABanner__bubble">
             <img src="./images/sec7/sec7_bubble_pc.png" alt="">
           </div>
@@ -1454,14 +1454,14 @@
              <h4>今なら相談料<br />
             着手金０円！</h4> 
           </div> -->
-          <div class="secondCTABanner__CTA-button">
+          <button class="secondCTABanner__CTA-button CTA-button">
             <div class="secondCTABanner__CTA-button__caption">
               <p>\ 無料リスク診断付き /</p>
             </div>
             <div class="secondCTABanner__CTA-button__action-word">
               <h3>今すぐ相談する</h3>
             </div>
-          </div>
+          </button>
         </div>
       </section>
 
@@ -1753,7 +1753,9 @@
               <div class="free-service__container__CTA__upper-text">
                 <h3>＼ お問い合わせは<span>1</span>分で完了！ ／</h3>
               </div>
-              <button class="free-service__container__CTA__button">今すぐ無料レポートを作成する！</button>
+              <button class="free-service__container__CTA__button">
+                <h3>今すぐ無料レポートを作成する！</h3>
+              </button>
             </div>
           </div>
         </div>
