--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
               <img src="./images/sec1/logo.svg" alt="" />
             </div>
             <div class="top__container__text">
-                <h3>検索結果・SNS・口コミサイトの<br />
-                ネガティブな情報にお困りの企業様へ</h3>
+                <h3>検索結果・SNS・口コミサイトの<br class="pc" />
+                ネガティブな情報に<br class="tab" />お困りの企業様へ</h3>
             </div>
 
             <button class="top__container__cta-button CTA-button">
@@ -642,7 +642,8 @@
                     備わっています
                   </p>
                   <p>
-                    そのためSNSや口コミサイトにはネガティブなレビューが投稿されやすくなります。ネット上に表示されたレビューにおいてもネガティブな情報がより閲覧されやすいため、結果として検索エンジンのアルゴリズムによって上位に表示されやすくなってしまうのです
+                    そのためSNSや口コミサイトにはネガティブなレビューが投稿されやすくなります。ネット上に表<br class="tab"/>
+                    示されたレビューにおいてもネガティブな情報がより閲覧されやすいため、結果として検索エンジ<br class="tab" />ンのアルゴリズムによって上位に表示されやすくなってしまうのです
                   <p>
                     上位に表示されたネガティブな情報をクリーンにすることで本質的な情報へのアクセスを増やし、<br />
                     <span>お客様の本来の価値が評価される環境をつくること</span>が風評被害クラウドのソリューションです
@@ -687,7 +688,7 @@
             </div>
             <div class="serviceDetail__effect__description">
               <p>
-                風評被害クラウドを導入することでどんな効果が得られるのか部門ごとにわけて3つ紹介いたします
+                風評被害クラウドを導入することでどんな効果が得られるのか<br />部門ごとにわけて3つ紹介いたします
               </p>
             </div>
             <div class="serviceDetail__effect__cards">
@@ -696,7 +697,7 @@
                   <div
                     class="serviceDetail__effect__cards__card__container__title"
                   >
-                    <h3>Branding</h3>
+                    <h3>BRanding</h3>
                   </div>
                   <div
                     class="serviceDetail__effect__cards__card__container__japaneseTitle"
@@ -824,7 +825,7 @@
               </div>
               <div class="serviceDetail__reasons__cards__card">
                 <div class="serviceDetail__reasons__cards__card__title">
-                  <h4><span>日本全国即日相談可能</span></h4>
+                  <h4><span>日本全国<br class="tab"/>即日相談可能</span></h4>
                 </div>
                 <div class="serviceDetail__reasons__cards__card__image">
                   <img src="./images/sec9/sec9_image-3.png" alt="">
@@ -913,7 +914,7 @@
                       class="serviceDetail__example__case__result__review__user__comment"
                     >
                       <p>
-                        風評被害クラウドのおかげで、会社の評判が劇的に改善しました。<br />
+                        風評被害クラウドのおかげで、会社の評判が劇的に改善しました。<br class="pc" />
                         迅速に対応していただき感謝しています。
                       </p>
                     </div>
@@ -928,7 +929,7 @@
                 </div>
                 <div class="serviceDetail__example__case__title__text">
                   <h3>
-                    検索結果に多数のネガティブな記事が上位表示され<br />
+                    検索結果に多数のネガティブな記事が上位表示<br class="tab" />され<br class="pc"/>
                     新規顧客の獲得に悪影響を及ぼしていた
                   </h3>
                 </div>
@@ -936,14 +937,22 @@
               <div class="serviceDetail__example__case__overview">
                 <div class="serviceDetail__example__case__overview__paragraph">
                   <p>
-                    風評被害クラウドでは、米国発のオンライン・レピュテーション・マネジメント（ORM）という手法を用いて既存コンテンツに着目した対策を行いました。逆SEOのように質の低いコンテンツが大量にネット上に投稿されてしまうことはありません。
+                    風評被害クラウドでは、米国発のオンライン・レピュテーション・マネジメント（ORM）
+                  という手法を用いて既存コンテンツに着目した対策を行いました。
+                  逆SEOのように質の低いコンテンツが大量にネット上に
+                  投稿されてしまうことはありません。
                   </p>
                 </div>
                 <div
                   class="serviceDetail__example__case__overview__half-paragraph"
                 >
                   <p>
-                    サービス歴10年以上の当社のノウハウを活かして、お客様側でもSEO対策のもとポジティブなニュースリリースやブログ記事の投稿やSNSキャンペーンを展開するなど、顧客からのポジティブなフィードバックを収集し、さらにコンテンツ発信できるようサポートいたしました。
+                    サービス歴10年以上の当社のノウハウを活かし
+                    <br class="tab" />て、お客様側でもSEO対策のもとポジティブな
+                    <br class="tab" />ニュースリリースやブログ記事の投稿やSNS
+                    <br class="tab" />キャンペーンを展開するなど、顧客からのポジ
+                    <br class="tab" />ティブなフィードバックを収集し、さらにコン
+                    <br class="tab" />テンツ発信できるようサポートいたしました。
                   </p>
                 </div>
                 <div class="serviceDetail__example__case__overview__logo">
@@ -951,7 +960,8 @@
                 </div>
                 <div class="serviceDetail__example__case__overview__paragraph">
                   <p>
-                    6か月後にはネガティブな記事が検索結果の下位に押しやられ、ポジティブなコンテンツが上位を占めるようになりました。新規顧客の問い合わせも増加しています。
+                    6か月後にはネガティブな記事が検索結果の下位に押しやられ、ポジティブなコンテンツが
+                    <br class="tab" />上位を占めるようになりました。新規顧客の問い合わせも増加しています。
                   </p>
                 </div>
               </div>
@@ -986,30 +996,21 @@
                   <div
                     class="serviceDetail__example__case__result__review__user"
                   >
-                    <div
-                      class="serviceDetail__example__case__result__review__user__name"
-                    >
+                  <div class="serviceDetail__example__case__result__review__user">
+                    <div class="serviceDetail__example__case__result__review__user__name">
                       <p>株式会社B様</p>
-                      <div
-                        class="serviceDetail__example__case__result__review__user__type"
-                      >
-                        <div
-                          class="serviceDetail__example__case__result__review__user__type__tag"
-                        >
+                      <div class="serviceDetail__example__case__result__review__user__type">
+                        <div class="serviceDetail__example__case__result__review__user__type__tag">
                           <p>小売業</p>
                         </div>
-                        <div
-                          class="serviceDetail__example__case__result__review__user__type__tag"
-                        >
-                          <p>マーケティング部</p>
+                        <div class="serviceDetail__example__case__result__review__user__type__tag">
+                          <p>マーケティング業</p>
                         </div>
                       </div>
                     </div>
-                    <div
-                      class="serviceDetail__example__case__result__review__user__comment"
-                    >
+                    <div class="serviceDetail__example__case__result__review__user__comment">
                       <p>
-                        検索結果の改善により、新規顧客の獲得がスムーズになりました。<br />
+                        検索結果の改善により、新規顧客の獲得がスムーズになりました。
                         ブランドクラウドさんのプロフェッショナルな対応に大変満足しています。
                       </p>
                     </div>
