--- a/index.html
+++ b/index.html
@@ -1174,7 +1174,7 @@
                       <div class="plan__container__cards__card__box__text-area__overview__content">
                         <div class="plan__container__cards__card__box__text-area__overview__content__item">
                           <div class="plan__container__cards__card__box__text-area__overview__content__item__check-box">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                            <svg class="plan-card-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
                               <path fill-rule="evenodd" clip-rule="evenodd"
                                 d="M22.5547 5.7308L21.9076 6.10989C18.9254 7.8568 16.6201 10.1586 15.056 12.0346C14.2756 12.9707 13.684 13.7957 13.289 14.3842C13.0915 14.6782 12.9435 14.9129 12.8458 15.0722C12.7969 15.1519 12.7607 15.2127 12.7371 15.2528L12.7114 15.2969L12.7057 15.3068L12.7048 15.3084L12.4895 15.6894H11.6174L11.3953 15.3535L11.3928 15.3499L11.3818 15.3335C11.3716 15.3184 11.3556 15.295 11.334 15.2641C11.291 15.2024 11.226 15.1108 11.1411 14.9961C10.9711 14.7663 10.7224 14.445 10.4111 14.0841C9.78228 13.3552 8.92555 12.4968 7.96988 11.8926L7.33594 11.4918L8.13749 10.2239L8.77143 10.6247C9.90478 11.3412 10.873 12.3232 11.5469 13.1044C11.7094 13.2928 11.8564 13.4713 11.986 13.6342C12.0048 13.606 12.0239 13.5773 12.0436 13.5481C12.4628 12.9236 13.0853 12.0561 13.9039 11.0741C15.5381 9.11398 17.971 6.6775 21.1494 4.81561L21.7965 4.43652L22.5547 5.7308Z"
                                 fill="#304266" />
