--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
               <img src="./images/sec1/logo.svg" alt="" />
             </div>
             <div class="top__container__text">
-                <h3>検索結果・SNS・口コミサイトの<br class="pc" />
+                <h3>検索結果・SNS・口コミサイトの<br class="pc" /><br class="sp" />
                 ネガティブな情報に<br class="tab" />お困りの企業様へ</h3>
             </div>
 
@@ -52,7 +52,7 @@
             <div class="company-overview__container__title">
               <h2>
                 ブランドクラウドは<br />
-                東証プライム上場のベクトルグループ上場のグループ会社です
+                東証プライム上場のベクトル<br class="sp" />グループ上場のグループ会社です
               </h2>
             </div>
             <div class="company-overview__container__stats">
@@ -65,8 +65,8 @@
                       class="company-overview__container__stats__cards__card__text__title"
                     >
                       <h3>
-                              サービス<br />
-                              <span>導入企業数</span>
+                        サービス<br />
+                        <span>導入企業数</span>
                       </h3>
                
                     </div>
@@ -161,7 +161,7 @@
                   </div>
                 </div>
                 <div class="issue__container__cards__card__image">
-                  <img src="./images/sec4/sec4_image-1_pc.png" alt="" />
+                  <img src="./images/sec4/sec4_image-1.png" alt="" />
                 </div>
               </div>
               <div class="issue__container__cards__card">
@@ -177,7 +177,7 @@
                   </div>
                 </div>
                 <div class="issue__container__cards__card__image">
-                  <img src="./images/sec4/sec4_image-2_pc.png" alt="" />
+                  <img src="./images/sec4/sec4_image-2.png" alt="" />
                 </div>
               </div>
               <div class="issue__container__cards__card">
@@ -193,7 +193,7 @@
                   </div>
                 </div>
                 <div class="issue__container__cards__card__image">
-                  <img src="./images/sec4/sec4_image-3_pc.png" alt="" />
+                  <img src="./images/sec4/sec4_image-3.png" alt="" />
                 </div>
               </div>
               <div class="issue__container__cards__card">
@@ -209,7 +209,7 @@
                   </div>
                 </div>
                 <div class="issue__container__cards__card__image">
-                  <img src="./images/sec4/sec4_image-4_pc.png" alt="" />
+                  <img src="./images/sec4/sec4_image-4.png" alt="" />
                 </div>
               </div>
             </div>
@@ -219,7 +219,7 @@
               <div class="issue__impact__container__title">
                 <h2>
                   <span>悪い評判</span>や<span>口コミ</span>の放置は<br />
-                  気づかないうちに会社に大きなダメージを与えてしまうことも・・・
+                  気づかないうちに会社に大きな<br class="sp" />ダメージを与えてしまうことも・・・
                 </h2>
               </div>
               <div class="issue__impact__container__items">
@@ -675,7 +675,8 @@
             </div>
           </button>
           <div class="firstCTABanner__bubble">
-            <img src="./images/sec7/sec7_bubble_pc.png" alt="">
+            <img class="pc" src="./images/sec7/sec7_bubble_pc.png" alt="">
+            <img class="tab" src="./images/sec7/sec7_bubble_tb.png" alt="">
           </div>
         </div>
       </section>
@@ -1446,10 +1447,11 @@
       <section id="secondCTABanner">
         <div class="secondCTABanner">
           <div class="secondCTABanner__image">
-            <img src="./images/sec15/sec13_model_pc.png" alt="" />
+            <img src="./images/sec13/sec13_model_pc.png" alt="" />
           </div>
           <div class="secondCTABanner__bubble">
-            <img src="./images/sec15/sec13_bubble_pc.png" alt="">
+            <img class="pc" src="./images/sec13/sec13_bubble_pc.png" alt="">
+            <img class="tab" src="./images/sec13/sec13_bubble_tb.png" alt="">
           </div>
           <!-- <div class="secondCTABanner__speech">
              <h4>今なら相談料<br />
@@ -1491,6 +1493,7 @@
                     <path fill-rule="evenodd" clip-rule="evenodd"
                       d="M1.65012 0L11.0007 9.61128L20.3497 2.35961e-07L22 0.692311L11.0008 12L0 0.692451L1.65012 0Z" fill="#304266" />
                   </svg>
+                  
                 </div>
               </div>
               <div class="faq__list__item__answer">
@@ -1502,8 +1505,43 @@
                   </svg>
                 </div>
                 <div class="faq__list__item__answer__text">
-                  <h4>無料です。契約を締結しサービスが開始するまでは一切費用はいただきません。<br />
+                  <h4>無料です。契約を締結しサービスが開始するまで費用は一切いただきません。<br />
                     お気軽にお問い合わせください。</h4>
+                </div>
+              </div>
+            </div>
+            <div class="faq__list__item">
+              <div class="faq__list__item__question">
+                <div class="faq__list__item__question__box">
+                  <div class="faq__list__item__question__box__symbol">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" fill="none">
+                      <path
+                        d="M11.0606 31.9945C9.00906 31.9945 7.15075 31.5111 5.48571 30.5442C3.82067 29.548 2.48269 28.2296 1.47178 26.5888C0.490592 24.9188 0 23.0876 0 21.0953V10.8992C0 8.8776 0.490592 7.04641 1.47178 5.40567C2.48269 3.76492 3.82067 2.46112 5.48571 1.49425C7.15075 0.498083 9.00906 0 11.0606 0C13.1122 0 14.9705 0.498083 16.6355 1.49425C18.3006 2.46112 19.6237 3.76492 20.6049 5.40567C21.6158 7.04641 22.1213 8.8776 22.1213 10.8992V21.0953C22.1213 21.7106 22.0618 22.3405 21.9429 22.9851C21.8239 23.6003 21.6604 24.201 21.4523 24.787C21.3333 25.0799 21.1252 25.2997 20.8279 25.4462C20.5603 25.5634 20.2927 25.5634 20.0251 25.4462C19.7278 25.329 19.5048 25.1385 19.3561 24.8749C19.2372 24.6112 19.2372 24.3328 19.3561 24.0398C19.475 23.7761 19.594 23.3806 19.7129 22.8532C19.8318 22.3258 19.8913 21.7399 19.8913 21.0953V10.8992C19.8913 9.31708 19.4899 7.86678 18.6871 6.54833C17.8843 5.22987 16.8139 4.17511 15.476 3.38404C14.138 2.59296 12.6662 2.19743 11.0606 2.19743C9.45505 2.19743 7.98328 2.59296 6.6453 3.38404C5.30732 4.17511 4.23693 5.22987 3.43415 6.54833C2.63136 7.86678 2.22997 9.31708 2.22997 10.8992V21.0953C2.22997 22.7067 2.63136 24.1717 3.43415 25.4901C4.23693 26.8086 5.30732 27.8633 6.6453 28.6544C7.98328 29.4162 9.45505 29.7971 11.0606 29.7971C11.9229 29.7971 12.7108 29.7092 13.4244 29.5334C14.138 29.3576 14.8218 29.0793 15.476 28.6984C15.7138 28.5226 15.9814 28.4786 16.2787 28.5665C16.5761 28.6251 16.8139 28.7716 16.9923 29.006C17.1707 29.299 17.2153 29.592 17.1261 29.885C17.0667 30.178 16.9031 30.3977 16.6355 30.5442C15.0597 31.5111 13.2014 31.9945 11.0606 31.9945ZM22.1659 31.7308L13.2014 24.0398C12.9933 23.864 12.8743 23.6296 12.8446 23.3367C12.8149 23.0144 12.8892 22.736 13.0676 22.5016C13.3055 22.2672 13.5731 22.15 13.8704 22.15C14.1677 22.1207 14.4204 22.194 14.6286 22.3698L23.6376 30.0608C23.8755 30.2659 23.9944 30.5296 23.9944 30.8518C24.0242 31.1448 23.935 31.4085 23.7268 31.6429C23.5187 31.848 23.266 31.9652 22.9686 31.9945C22.6713 32.0238 22.4037 31.9359 22.1659 31.7308Z"
+                        fill="#304266" />
+                    </svg>
+                  </div>
+                  <div class="faq__list__item__question__box__text">
+                    <h4>GoogleとYahoo!に表示されるキーワードやサイトの順位は同じですか？</h4>
+                  </div>
+                </div>
+                <div class="faq__list__item__question__arrow">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="12" viewBox="0 0 22 12" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M1.65012 0L11.0007 9.61128L20.3497 2.35961e-07L22 0.692311L11.0008 12L0 0.692451L1.65012 0Z" fill="#304266" />
+                  </svg>
+                </div>
+              </div>
+              <div class="faq__list__item__answer">
+                <div class="faq__list__item__answer__symbol">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" fill="none">
+                    <path
+                      d="M0.692169 31.9217C0.403765 31.8337 0.201883 31.6575 0.0865211 31.3934C-0.0288404 31.0998 -0.0288404 30.8063 0.0865211 30.5128L10.9449 0.704478C11.1468 0.234826 11.4929 0 11.9832 0C12.4735 0 12.8195 0.234826 13.0214 0.704478L23.9231 30.5128C24.0385 30.8063 24.024 31.0998 23.8798 31.3934C23.7645 31.6575 23.5626 31.8337 23.2742 31.9217C23.0146 32.0391 22.7406 32.0245 22.4522 31.8777C22.1927 31.7603 22.0052 31.5548 21.8898 31.2613L11.9832 4.27091L5.96996 20.606H14.1462C14.4346 20.606 14.6798 20.7234 14.8816 20.9583C15.0835 21.1637 15.1845 21.4279 15.1845 21.7508C15.1845 22.0443 15.0835 22.2938 14.8816 22.4993C14.6798 22.7048 14.4346 22.8075 14.1462 22.8075H5.14801L2.07651 31.2613C1.96115 31.5548 1.77368 31.7603 1.51412 31.8777C1.25456 32.0245 0.980573 32.0391 0.692169 31.9217Z"
+                      fill="#304266" />
+                  </svg>
+                </div>
+                <div class="faq__list__item__answer__text">
+                  <h4>キーワード（オートコンプリート、サジェスト機能）については、GoogleとYahoo!で別のアルゴリズムです。
+                  一方で、検索結果のサイト順位については、日本においてのみYahoo!はGoogleのエンジンを借りているため結果は同じになります。</h4>
                 </div>
               </div>
             </div>
@@ -1537,9 +1575,8 @@
                                 </svg>
                               </div>
                               <div class="faq__list__item__answer__text">
-                                <h4>各プラットフォームの規約に則って施策を行うため以下のお時間がかかります。<br />
-                                （Googleキーワード対策：2～12ヶ月、Yahoo!キーワード対策：1～2ヶ月、検索結果対策：4～12ヶ月）
-                                通常1～2ヶ月程度で施策の動きや効果が見えてきます。<br />
+                                <h4>各プラットフォームの規約に則って施策を行うため以下のお時間が平均でかかります。<br />
+                                （Googleキーワード対策：2ヶ月～、Yahoo!キーワード対策：1ヶ月～、検索結果対策：4ヶ月～）<br />
                                 ※あくまで平均値となりますため、多少前後する可能性がある旨ご了承ください。</h4>
                               </div>
               </div>
@@ -1574,7 +1611,7 @@
                                 </svg>
                               </div>
                               <div class="faq__list__item__answer__text">
-                                <h4>記事によりますが可能なものもございます。弁護士による対応となりますので弁護士事務所をお繋ぎいたします。
+                                <h4>記事により可能なものがございます。弁護士による対応となりますので実績豊富な弁護士事務所をお繋ぎいたします。
                                 一方で削除することでネガティブな感情を逆撫でしてしまい二次災害のおそれもございます。
                                 弊社側で削除の危険度合いを分析することもできますのでお気軽にご相談ください。</h4>
                               </div>
@@ -1591,7 +1628,7 @@
                     </svg>
                   </div>
                   <div class="faq__list__item__question__box__text">
-                    <h4>導入後にレポート等は出してもらえますか？また、提出の頻度はどれくらいでしょうか？</h4>
+                    <h4>導入後にレポートなどは出してもらえますか？ある場合頻度はどのようなイメージでしょうか？</h4>
                   </div>
                 </div>
                 <div class="faq__list__item__question__arrow">
@@ -1610,9 +1647,7 @@
                   </svg>
                 </div>
                 <div class="faq__list__item__answer__text">
-                  <h4>記事によりますが可能なものもございます。弁護士による対応となりますので弁護士事務所をお繋ぎいたします。
-                    一方で削除することでネガティブな感情を逆撫でしてしまい二次災害のおそれもございます。
-                    弊社側で削除の危険度合いを分析することもできますのでお気軽にご相談ください。</h4>
+                  <h4>月次のレポートを無料で送付いたしますので、ご契約当初からどのように変化したかを毎月ご報告いたします。</h4>
                 </div>
               </div>
             </div>
@@ -1648,6 +1683,41 @@
                 <div class="faq__list__item__answer__text">
                   <h4>ECや通信販売を始めとする小売業、不動産業、学校や塾、エステ等の消費者サービス、医薬品製造、歯医者、美容クリニックを含めた病院等の医薬・バイオ業界、人材派遣/紹介業、投資商品や保険といった金融業が多く、レピュテーションに影響を受けやすい業種が比較的多いです。
                   一方で、人材採用におけるレピュテーションリスクの対策は業種の偏りなく、年間数十人以上の規模で採用活動をされているお客様にご利用いただいております。</h4>
+                </div>
+              </div>
+            </div>
+            <div class="faq__list__item">
+              <div class="faq__list__item__question">
+                <div class="faq__list__item__question__box">
+                  <div class="faq__list__item__question__box__symbol">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" fill="none">
+                      <path
+                        d="M11.0606 31.9945C9.00906 31.9945 7.15075 31.5111 5.48571 30.5442C3.82067 29.548 2.48269 28.2296 1.47178 26.5888C0.490592 24.9188 0 23.0876 0 21.0953V10.8992C0 8.8776 0.490592 7.04641 1.47178 5.40567C2.48269 3.76492 3.82067 2.46112 5.48571 1.49425C7.15075 0.498083 9.00906 0 11.0606 0C13.1122 0 14.9705 0.498083 16.6355 1.49425C18.3006 2.46112 19.6237 3.76492 20.6049 5.40567C21.6158 7.04641 22.1213 8.8776 22.1213 10.8992V21.0953C22.1213 21.7106 22.0618 22.3405 21.9429 22.9851C21.8239 23.6003 21.6604 24.201 21.4523 24.787C21.3333 25.0799 21.1252 25.2997 20.8279 25.4462C20.5603 25.5634 20.2927 25.5634 20.0251 25.4462C19.7278 25.329 19.5048 25.1385 19.3561 24.8749C19.2372 24.6112 19.2372 24.3328 19.3561 24.0398C19.475 23.7761 19.594 23.3806 19.7129 22.8532C19.8318 22.3258 19.8913 21.7399 19.8913 21.0953V10.8992C19.8913 9.31708 19.4899 7.86678 18.6871 6.54833C17.8843 5.22987 16.8139 4.17511 15.476 3.38404C14.138 2.59296 12.6662 2.19743 11.0606 2.19743C9.45505 2.19743 7.98328 2.59296 6.6453 3.38404C5.30732 4.17511 4.23693 5.22987 3.43415 6.54833C2.63136 7.86678 2.22997 9.31708 2.22997 10.8992V21.0953C2.22997 22.7067 2.63136 24.1717 3.43415 25.4901C4.23693 26.8086 5.30732 27.8633 6.6453 28.6544C7.98328 29.4162 9.45505 29.7971 11.0606 29.7971C11.9229 29.7971 12.7108 29.7092 13.4244 29.5334C14.138 29.3576 14.8218 29.0793 15.476 28.6984C15.7138 28.5226 15.9814 28.4786 16.2787 28.5665C16.5761 28.6251 16.8139 28.7716 16.9923 29.006C17.1707 29.299 17.2153 29.592 17.1261 29.885C17.0667 30.178 16.9031 30.3977 16.6355 30.5442C15.0597 31.5111 13.2014 31.9945 11.0606 31.9945ZM22.1659 31.7308L13.2014 24.0398C12.9933 23.864 12.8743 23.6296 12.8446 23.3367C12.8149 23.0144 12.8892 22.736 13.0676 22.5016C13.3055 22.2672 13.5731 22.15 13.8704 22.15C14.1677 22.1207 14.4204 22.194 14.6286 22.3698L23.6376 30.0608C23.8755 30.2659 23.9944 30.5296 23.9944 30.8518C24.0242 31.1448 23.935 31.4085 23.7268 31.6429C23.5187 31.848 23.266 31.9652 22.9686 31.9945C22.6713 32.0238 22.4037 31.9359 22.1659 31.7308Z"
+                        fill="#304266" />
+                    </svg>
+                  </div>
+                  <div class="faq__list__item__question__box__text">
+                    <h4>原因コンテンツが無いにもかかわらず、ネガティブワードが表示されているのはなぜですか？</h4>
+                  </div>
+                </div>
+                <div class="faq__list__item__question__arrow">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="22" height="12" viewBox="0 0 22 12" fill="none">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                      d="M1.65012 0L11.0007 9.61128L20.3497 2.35961e-07L22 0.692311L11.0008 12L0 0.692451L1.65012 0Z" fill="#304266" />
+                  </svg>
+                </div>
+              </div>
+              <div class="faq__list__item__answer">
+                <div class="faq__list__item__answer__symbol">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="32" viewBox="0 0 24 32" fill="none">
+                    <path
+                      d="M0.692169 31.9217C0.403765 31.8337 0.201883 31.6575 0.0865211 31.3934C-0.0288404 31.0998 -0.0288404 30.8063 0.0865211 30.5128L10.9449 0.704478C11.1468 0.234826 11.4929 0 11.9832 0C12.4735 0 12.8195 0.234826 13.0214 0.704478L23.9231 30.5128C24.0385 30.8063 24.024 31.0998 23.8798 31.3934C23.7645 31.6575 23.5626 31.8337 23.2742 31.9217C23.0146 32.0391 22.7406 32.0245 22.4522 31.8777C22.1927 31.7603 22.0052 31.5548 21.8898 31.2613L11.9832 4.27091L5.96996 20.606H14.1462C14.4346 20.606 14.6798 20.7234 14.8816 20.9583C15.0835 21.1637 15.1845 21.4279 15.1845 21.7508C15.1845 22.0443 15.0835 22.2938 14.8816 22.4993C14.6798 22.7048 14.4346 22.8075 14.1462 22.8075H5.14801L2.07651 31.2613C1.96115 31.5548 1.77368 31.7603 1.51412 31.8777C1.25456 32.0245 0.980573 32.0391 0.692169 31.9217Z"
+                      fill="#304266" />
+                  </svg>
+                </div>
+                <div class="faq__list__item__answer__text">
+                  <h4>コンテンツがなくても、ユーザーの自然検索や、競合他社からの嫌がらせ等で表示されてしまうこともございます。
+                  原因分析も行いますのでお気軽にご相談くださいませ。</h4>
                 </div>
               </div>
             </div>
