--- a/policy.html
+++ b/policy.html
@@ -11,25 +11,32 @@
 <body>
   <div class="policy">
     <h1>プライバシーポリシー</h1>
-    <p>当機構は、高度情報通信社会における個人情報保護の重要性を認識し、以下の方針に基づき個人情報の保護に努めます。</p>
+    <p>当社は、以下のとおり個人情報保護方針を定め、個人情報保護の仕組みを構築し、 全従業員に個人情報保護の重要性の認識と取組みを徹底させることにより、個人情報の保護を推進致します。</p>
 
-    <h2>1. 個人情報の取り扱いについて</h2>
-    <p>個人情報を取得する場合は、適法かつ公正な手段により取得します。法令により例外として扱われる場合を除き、あらかじめご本人の同意を得ることなく、個人情報を第三者に提供することはありません。</p>
+    <h2>個人情報の管理</h2>
+    <p>当社は、お客さまの個人情報を正確かつ最新の状態に保ち、個人情報への不正アクセス・紛失・破損・改ざん・漏洩などを防止するため、セキュリティシステムの維持・管理体制の整備・社員教育の徹底等の必要な措置を講じ、安全対策を実施し個人情報の厳重な管理を行ないます。</p>
 
-    <h2>2. 保有する個人情報の管理について</h2>
+    <h2>個人情報の利用目的</h2>
     <p>
-      職員に対して、個人情報の取り扱い、管理等について、必要な研修を実施します。個人情報保護管理者を責任者として設置し、個人情報の取り扱い等について適切な管理に努めます。個人情報保護に関する内部規程を整備し、個人情報の取り扱い、管理等について明確な方針を示すとともに、不正アクセス、紛失、改ざん、漏えい等の予防や是正に関する適切なセキュリティ対策を講じます。
+      お客さまからお預かりした個人情報は、当社からのご連絡や業務のご案内やご質問に対する回答として、電子メールや資料のご送付に利用いたします。
     </p>
-
-    <div class="policy__contact">
-      <h2>お問い合わせ先</h2>
-      <p>ご相談を受け付けたご本人から、ご本人の個人情報に関するお問い合わせがあったときは、適正に対応します。</p>
-    </div>
-
-    <div class="policy__footer">
-      <p>株式会社ブランドクラウド</p>
-    </div>
-
+    <h2>個人情報の第三者への開示・提供の禁止</h2>
+    <p>
+      当社は、お客さまよりお預かりした個人情報を適切に管理し、次のいずれかに該当する場合を除き、個人情報を第三者に開示いたしません。 お客さまの同意がある場合 お客さまが希望されるサービスを行なうために当社が業務を委託する業者に対して開示する場合
+      法令に基づき開示することが必要である場合
+    </p>
+    <h2>個人情報の安全対策</h2>
+    <p>
+      当社は、個人情報の正確性及び安全性確保のために、セキュリティに万全の対策を講じています。
+    </p>
+    <h2>ご本人の照会</h2>
+    <p>
+      お客さまがご本人の個人情報の照会・修正・削除などをご希望される場合には、ご本人であることを確認の上、対応させていただきます。
+    </p>
+    <h2>法令、規範の遵守と見直し</h2>
+    <p>
+      当社は、保有する個人情報に関して適用される日本の法令、その他規範を遵守するとともに、本ポリシーの内容を適宜見直し、その改善に努めます。
+    </p>
     <div class="policy__back-to-top">
       <a href="./index.html">TOPに戻る</a>
     </div>
@@ -38,7 +45,7 @@
           <div class="footer">
             <div class="footer__container">
               <div class="footer__container__logo">
-                <img src="./images/footer-logo.png" alt="">
+                <img src="./images/sec18/footer_logo.png" alt="">
               </div>
               <div class="footer__container__content">
         
