--- a/regulation.html
+++ b/regulation.html
@@ -14,52 +14,50 @@
     <table>
       <tr>
         <th>事業者名</th>
-        <td>株式会社日本スポーツエージェント</td>
+        <td>ブランドクラウド</td>
       </tr>
       <tr>
         <th>事業概要</th>
-        <td>スポーツ選手代理人法人・スポーツチーム代理人法人・マネジメント事務所（日米法務局登記）</td>
+        <td>風評被害、誹謗中傷対策事業、Webマーケティング事業、Webブランディング事業、Web広告運用代理事業、受託開発事業</td>
       </tr>
       <tr>
         <th>代表取締役</th>
-        <td>古屋 博史</td>
+        <td>叶野 雄与</td>
       </tr>
       <tr>
         <th>所在地</th>
-        <td>東京都中央区銀座7-13-6 サガミビル2階</td>
+        <td>東京都港区赤坂8-5-34</td>
       </tr>
       <tr>
         <th>URL</th>
-        <td><a href="https://www.japanteam-sa.jp/">https://www.japanteam-sa.jp/</a></td>
+        <td><a href="https://brandcloud.co.jp">https://brandcloud.co.jp</a></td>
       </tr>
       <tr>
         <th>連絡先</th>
-        <td><a href="https://www.japanteam-sa.jp/contact.html">https://www.japanteam-sa.jp/contact.html（お問い合わせ専用ページ）</a>
-        </td>
+        <td>03-6447-2653</td>
       </tr>
       <tr>
         <th>商品・サービス</th>
-        <td>2024年7月30日・7月31日に開催予定のサンディエゴ・パドレス対ロサンゼルス・ドジャース戦の球場広告枠（フルパッケージ）</td>
+        <td>会社名やサービス名などの検索環境を健全化する
+          誹謗中傷対策サービス「風評被害クラウド」等</td>
       </tr>
       <tr>
         <th>販売価格</th>
-        <td>販売価格は、要相談となっております。詳細は、応募フォームにてお問い合わせください。営業担当者よりご連絡を差し上げます。</td>
+        <td>1. モニタリング重視プラン: 月額15万円〜 <br />
+          2. 風評被害クラウド30プラン: 月額30万円〜 <br />
+          3. オーダーメイドプラン: 応相談 最低価格月額 5 万円から、
+          貴社のニーズを伺った上で柔軟にご提案いたします。
+          詳細はフォームにてお問い合わせください。営業担当者よりご連絡を差し上げます。</td>
       </tr>
       <tr>
         <th>お支払い方法</th>
-        <td>お支払い方法は、契約内容によって異なります。詳細は、応募フォームにてお問い合わせください。営業担当者よりご連絡を差し上げます。</td>
+        <td>お支払い方法は契約内容によって異なります。詳細は、フォームにてお問い合わせください。
+          営業担当者よりご連絡を差し上げます。</td>
       </tr>
       <tr>
         <th>キャンセル・返金</th>
-        <td>キャンセル・返金は、契約内容によって異なります。詳細は、応募フォームにてお問い合わせください。営業担当者よりご連絡を差し上げます。</td>
-      </tr>
-      <tr>
-        <th>その他</th>
-        <td>
-          ※ご案内している選手の出場は現時点で確定しておりません。<br>
-          ※変更となる場合がございますので、予めご了承ください。<br>
-          ※天候不良や災害等の不可抗力による、試合が延期・中止となる場合がございます。
-        </td>
+        <td>キャンセル・返金は契約内容によって異なります。詳細はフォームにてお問い合わせください。
+          営業担当者よりご連絡を差し上げます。</td>
       </tr>
     </table>
 
@@ -72,7 +70,7 @@
     <div class="footer">
       <div class="footer__container">
         <div class="footer__container__logo">
-          <img src="./images/footer-logo.png" alt="">
+          <img src="./images/sec18/footer_logo.png" alt="">
         </div>
         <div class="footer__container__content">
           <div class="footer__container__content__policy">
