--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 ネガティブな情報に<br class="tab" />お困りの企業様へ</h3>
             </div>
 
-            <button class="top__container__cta-button CTA-button">
+            <button onclick="" class="top__container__cta-button CTA-button">
               <a href="#contact">
                 <div class="top__container__cta-button__upper">
                   <h2>\ 無料リスク診断付き /</h2>
@@ -57,7 +57,7 @@
             <div class="company-overview__container__title">
               <h2>
                 ブランドクラウドは<br />
-                東証プライム上場のベクトル<br class="sp" />グループ上場のグループ会社です
+                東証プライム上場の<br class="sp" />株式会社ベクトルのグループ会社です
               </h2>
             </div>
             <div class="company-overview__container__stats">
