--- a/index.html
+++ b/index.html
@@ -1257,11 +1257,11 @@
               <div class="plan__container__description__upper">
                 <h3>
                   最低価格月額<span> 5 </span>
-                  万円からお客様のご要望<br class="sp" />に応じたプランのご提案が可能です
+                  万円からお客様のご要望<br class="tab sp" />に応じたプランのご提案が可能です
                 </h3>
                 <h3 class="sp">代表的な３つのプランをご紹介いたします</h3>
               </div>
-              <div class="pc tab plan__container__description__lower">
+              <div class="pc plan__container__description__lower">
                 <h3>代表的な<span>3</span>つのプランをご紹介いたします</h3>
               </div>
             </div>
@@ -1548,9 +1548,12 @@
             </ul>
             <div class="plan__container__annotation">
               <p>※1 風評被害クラウドでお申し込みいただいた検索キーワードについては無料で付帯いたします<br />
+              <br class="sp" />
               ※2 当社のアナリティストが分析の上、最も施策効果の高い箇所をご提案いたします<br />
-              ※3 貴社のニーズを伺った上で、必要な施策を盛り込みお見積りを提示いたします (必ずしも記載のすべてのサービ<br />
-              　　スが含まれるわけではございません。貴社に必要なもののみをご提案いたします)<br />
+              <br class="sp" />
+              ※3 貴社のニーズを伺った上で、必要な施策を盛り込みお見積りを提示いたします (必ずしも記載の
+              すべてのサービスが含まれるわけではございません。貴社に必要なもののみをご提案いたします)<br />
+              <br class="sp" />
               ※4 風評被害クラウドのサービスを応用して、逆に良い情報を上位表示させるサービスです</p>
             </div>
           </div>
