--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ j<!DOCTYPE html>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta HTTP-EQUIV="Content-type" CONTENT="text/html; charset=UTF-8">
+    <meta name="robots" content="noindex , nofollow" />
     <title>風評被害クラウドサービス</title>
     <link rel="stylesheet" href="./normalize.css" />
     <link rel="stylesheet" href="./style.css" />
