--- a/index.html
+++ b/index.html
@@ -2231,7 +2231,7 @@ j<!DOCTYPE html>
         </div>
       </section>
 
-      <section id="footer">
+      <footer id="footer">
         <div class="footer">
           <div class="footer__container">
             <div class="footer__container__logo">
@@ -2249,7 +2249,7 @@ j<!DOCTYPE html>
             </div>
           </div>
         </div>
-      </section>
+      </footer>
     </main>
     <script src="./index.js"></script>
   </body>
